# taipy-demo-logistic-regression

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: nodes.py  pipelines.py  tasks.py
src/models/: data.py  predict.py
src/pages/: home.md  home.py
